# OKmic

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/soundproof_okmic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDataListener.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  DSPmodule.cpp  DSPmodule.h  LockFreeQueue.h  native-lib.cpp
app/src/main/java/com/example/soundproof_okmic/: AudioManager.kt  ConfigurationSettings.kt  DatabaseManager.kt  MainActivity.kt  NoiseTestProcessor.kt
app/src/main/java/com/example/soundproof_okmic/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/soundproof_okmic/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
